--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
   <body>
 
     {%- include header.html -%}
+    Hej
 
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
