--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,8 @@
 
   <div class="wrapper">
 
+    hej
+    
     <div class="footer-col-wrapper">
       <div class="footer-col one-half">
       <h2 class="footer-heading">{{ site.title | escape }}</h2>
