--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,9 @@
     
     <div class="footer-col-wrapper">
       <div class="footer-col one-half">
-      <h2 class="footer-heading"><img src="pngreensmall.png" /> © 2019 PN Green (part of Kafferaven AB)</h2>
+      <h2 class="footer-heading">
+        <img src="pngreensmall.png" /><span> © 2019 PN Green (part of Kafferaven AB)</span>
+      </h2>
         <ul class="contact-list">
           <li class="p-name">
             {%- if site.author -%}
