--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,8 +6,8 @@
     
     <div class="footer-col-wrapper">
       <div class="footer-col one-half">
-      <h2 class="footer-heading">
-        <img src="pngreensmall.png" /><span> © 2019 PN Green (part of Kafferaven AB)</span>
+      <h2 class="footer-heading" style="display: flex; flex-wrap: wrap; align-items: center">
+        <img src="pngreensmall.png" /><div> © 2019 PN Green (part of Kafferaven AB)</div>
       </h2>
         <ul class="contact-list">
           <li class="p-name">
